--- a/product_detail.css
+++ b/product_detail.css
@@ -1,27 +1,34 @@
-.body{
+		.body{
 			width:80%;
 			overflow: auto;
   			margin: auto;
+  			
 		}
 		#header{
-
-    		 padding:20px;
+			position: relative;
+    		padding:20px;
+    		
     		
 		}
-		#header > h1{
+		.body > #header > h1{
 			font-family: "Open Sans", Arial, sans-serif;
 			font-size:50px;
 			margin-left:30px;
-			padding:20px;
-			text-align: left;
+			margin-top: 5px;
+			text-align:left;
+			display: inline;
+			position:absolute;
 		}
 		nav ul {
 			list-style-type: none;
     		overflow: hidden;
     		background-color: #333;
+    		margin-top: 150px;
+    		
     		}
 		nav li {
     		float: left;
+
 			}
 		
 		nav li a, .dropbtn {
@@ -32,7 +39,7 @@
     		font-size: 25px;
     		font-weight:bold;
     		padding: 14px 16px;
-    		
+    		margin-bottom: 5px;
 		}
  		nav li a:hover, .dropdown:hover .dropbtn {
     		background-color: red;
@@ -54,6 +61,7 @@
     		text-decoration: none;
     		display: block;
     		text-align: left;
+    		margin-bottom: 5px;
 		}
 		nav .dropdown-content a:hover {background-color: #f1f1f1;  }
 		nav .dropdown:hover .dropdown-content {
@@ -61,10 +69,13 @@
     		overflow:visible;
     	}
 		.pagebanner > img {
+			margin-top: 150px;
 			width: 100%;
 			height: 400px;
 			border-bottom: solid #333;
 			border-bottom-width:10px;
+			position:relative;
+			
 		} 
 
 		#row2 > ul >li{
@@ -75,70 +86,96 @@
 	    	padding:10px;
 	    	margin-top: 45px;
 	    	margin-bottom:15px;
+	    	position: relative;
+	    	
 	    }
 		
 		#row3{
 			height:800px;
-			width:100%;
+			position: relative;
 		}
 
-		#picture {
-			margin:30px 20px 20px 30px;
-    		float:center;   		 
-		}
-
-		#info{
+		#row3 > #info{
     		width: 50%;
-    		margin: 10px 20px 20px 30px;
+    		margin: 30px 20px 20px 600px;
     		height:100%;
-    		float:right;   		 
+    		float:right;  
+    		position: absolute;
 		}
-		#price,#ship{
-		
+		#info> tr{
+			margin:10px 20px 20px 30px;
+    		float:left;  
+    		position: absolute;
+		}
+
+	   
+		#product_detail > #price{
+			display: inline-block;
 			font-family: sans-serif;
 			font-color: black;
 			font-size:200%;
 			float:center;
 			margin: 10px 10px 10px 50px;
+			position: absolute;		
 
 		}
-		#buy{
-			margin: 10px 10px 10px 50px;
+		#product_detail > #ship{
+			display: inline-block;
+			font-family: sans-serif;
+			font-color: black;
+			font-size:200%;
 			float:center;
+
+			margin: 60px 10px 10px 50px;
+			position: absolute;	
+
 		}
-	    #details{
-	    	
+		#product_detail > #picture{
+			margin: 100px 10px 10px 50px;
+			float:center;
+			position: absolute;
+		}
+	    #product_detail > #details{
+	    	display: inline-block;
 	    	font-family: sans-serif;
 	    	float:center;
-	    	margin: 10px 10px 10px 50px;
+	    	margin: 220px 10px 10px 50px;
 	    	font-color: black;
+	    	position: absolute;
+	    
+	    }
+
+	    #product_detail > #feature_title{
+	    	display: inline-block;
+	    	font-family: sans-serif;
+	    	float:center;
+	    	font-color: black;
+	    	margin:350px 10px 10px 50px;
+	    	position: absolute;
 
 	    }
-	    #feature_title{
+
+	    #product_detail > #feature{
+	    	display: inline-block;
+	    	font-family: sans-serif;
+	    	float:center;
 	    	
-	    	font-family: sans-serif;
-	    	float:center;
 	    	font-color: black;
-	    	margin:10px 10px 10px 50px;
-
-	    }
-	    #feature{
-	    	font-family: sans-serif;
-	    	float:center;
-	    	font-color: black;
-	    	margin:5px 10px 5px 50px;
-
+	    	margin:400px 10px 5px 50px;
+	    	position: absolute;
+	    	
 	    }
 	    footer{
 
     		background-color:#333;
 			font-family: sans-serif;
-    		font-size: 15px;
+    		font-size: 40px;
     		color:white;
     		clear:both;
     		text-align:center;
     		float:center;
-   			padding:5px;	
-   			margin-top:10px; 	 
+   			padding:5px;		
+   			margin-top:80px;
+   			width: 80%;
+   			position: absolute; 
 		}
-
