--- a/product_detail.css
+++ b/product_detail.css
@@ -1,4 +1,4 @@
-		.body{
+		body{
 			width:80%;
 			overflow: auto;
   			margin: auto;
@@ -102,7 +102,7 @@
     		float:right;  
     		position: absolute;
 		}
-		#info> tr{
+		#info> #product_detail{
 			margin:10px 20px 20px 30px;
     		float:left;  
     		position: absolute;
@@ -159,7 +159,6 @@
 	    	display: inline-block;
 	    	font-family: sans-serif;
 	    	float:center;
-	    	
 	    	font-color: black;
 	    	margin:400px 10px 5px 50px;
 	    	position: absolute;
@@ -177,5 +176,6 @@
    			padding:5px;		
    			margin-top:80px;
    			width: 80%;
-   			position: absolute; 
+   			position: absolute;
 		}
+
