--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -1,80 +1,73 @@
 		body{
-			width:80%;
-			overflow: auto;
-  			margin: auto;
-  			
+		  width:80%;
+		  overflow: auto;
+		    margin: auto;
 		}
 		#header{
-			position: relative;
-    		padding:20px;
-    		
-    		
+		    font-family: "Open Sans", Arial, sans-serif;
+		    text-align: left;
+		    padding:20px;
 		}
-		.body > #header > h1{
-			font-family: "Open Sans", Arial, sans-serif;
-			font-size:50px;
-			margin-left:30px;
-			margin-top: 5px;
-			text-align:left;
-			display: inline;
-			position:absolute;
+		img {
+    		width:40%
+
 		}
 		nav ul {
-			list-style-type: none;
-    		overflow: hidden;
-    		background-color: #333;
-    		margin-top: 150px;
-    		
-    		}
-		nav li {
-    		float: left;
-
-			}
-		
-		nav li a, .dropbtn {
-    		display: inline-block;
-    		color: white;
-    		text-align: center;
-    		font-family: "Open Sans", Arial, sans-serif;
-    		font-size: 25px;
-    		font-weight:bold;
-    		padding: 14px 16px;
-    		margin-bottom: 5px;
+		    list-style-type: none;
+		   /*margin-top: -20px;
+		    margin-left: -20px;*/
+		    margin: 0;
+		    padding: 0;
+		    overflow: hidden;
+		    background-color: #333;
 		}
- 		nav li a:hover, .dropdown:hover .dropbtn {
-    		background-color: red;
+		nav li {
+		    float: left;
+		}
+		  
+		/* Change the link color to #111 (black) on hover */
+		/*nav li a:hover {
+		    background-color: #111;
+		}*/
+		nav li a, .dropbtn {
+		    display: inline-block;
+		    color: white;
+		    text-align: center;
+		    padding: 14px 16px;
+		    text-decoration: none;
+		}
+		nav li a:hover, .dropdown:hover .dropbtn {
+		    background-color: red;
 		}
 		nav li.dropdown {
-    		display: inline-block;
-    
+		    display: inline-block;
+		    
 		}
 		nav .dropdown-content {
-    		display: none;
-    		position: absolute;
-   			background-color: #f9f9f9;
-    		min-width: 160px;
-    		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+		    display: none;
+		    position: absolute;
+		    background-color: #f9f9f9;
+		    min-width: 160px;
+		    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 		}
 		nav .dropdown-content a {
-    		color: black;
-    		padding: 12px 16px;
-    		text-decoration: none;
-    		display: block;
-    		text-align: left;
-    		margin-bottom: 5px;
+		    color: black;
+		    padding: 12px 16px;
+		    text-decoration: none;
+		    display: block;
+		    text-align: left;
 		}
 		nav .dropdown-content a:hover {background-color: #f1f1f1;  }
 		nav .dropdown:hover .dropdown-content {
-    		display: block;
-    		overflow:visible;
-    	}
+		    display: block;
+		    overflow:visible;
+		    z-index:100;
+		}
+
+
 		.pagebanner > img {
-			margin-top: 150px;
 			width: 100%;
-			height: 400px;
-			border-bottom: solid #333;
-			border-bottom-width:10px;
-			position:relative;
+  			height: 400px;
 			
 		} 
 
@@ -90,14 +83,15 @@
 	    	
 	    }
 		
-		#row3{
-			height:800px;
+		#row3{	
 			position: relative;
+			min-height: 1100px;
 		}
 
 		#row3 > #info{
     		width: 50%;
     		margin: 30px 20px 20px 600px;
+    		padding:5px;
     		height:100%;
     		float:right;  
     		position: absolute;
@@ -105,7 +99,7 @@
 		#info> #product_detail{
 			margin:10px 20px 20px 30px;
     		float:left;  
-    		position: absolute;
+    		position:relative;
 		}
 
 	   
@@ -116,7 +110,7 @@
 			font-size:200%;
 			float:center;
 			margin: 10px 10px 10px 50px;
-			position: absolute;		
+			position: relative;		
 
 		}
 		#product_detail > #ship{
@@ -125,19 +119,23 @@
 			font-color: black;
 			font-size:200%;
 			float:center;
-
 			margin: 60px 10px 10px 50px;
-			position: absolute;	
+			position: relative;	
 
 		}
-		#product_detail > #picture{
-			margin: 100px 10px 10px 50px;
-			float:center;
-			position: absolute;
+		#row3 > div{
+			padding-left:20px;
 		}
-		#picture :hover{
-			width:600px;
-			height:700px;
+		#item2,#item3{ 
+			position: relative;
+			display: block;
+			width:39%;
+		}
+			
+		
+		#item1:hover, #item2:hover, #item3:hover{
+			width:100%;
+			height:100%;
 		}
 	    #product_detail > #details{
 	    	display: inline-block;
@@ -145,7 +143,7 @@
 	    	float:center;
 	    	margin: 220px 10px 10px 50px;
 	    	font-color: black;
-	    	position: absolute;
+	    	position: relative;	
 	    
 	    }
 
@@ -155,7 +153,7 @@
 	    	float:center;
 	    	font-color: black;
 	    	margin:350px 10px 10px 50px;
-	    	position: absolute;
+	    	position: relative;	
 
 	    }
 
@@ -165,20 +163,15 @@
 	    	float:center;
 	    	font-color: black;
 	    	margin:400px 10px 5px 50px;
-	    	position: absolute;
+	    	position: relative;	
 	    	
 	    }
-	    footer{
-
-    		background-color:#333;
-			font-family: sans-serif;
-    		font-size: 40px;
-    		color:white;
-    		clear:both;
-    		text-align:center;
-    		float:center;
-   			padding:5px;		
-   			margin-top:80px;
-   			width: 80%;
-   			position: absolute;
+		.footer{
+		padding:5px;
+  		background-color: #333;
+  		bottom: 0;
+  		color:white;
+ 		clear:both;
+  		text-align:center;
+  		position: relative;	
 		}
