--- a/css/contact.css
+++ b/css/contact.css
@@ -3,6 +3,12 @@
   overflow: auto;
     margin: auto;
 }
+div.img{
+        margin-left:23%;
+        float: center;
+        width: 18%;
+        height: 9%;
+    }
 #header{
     font-family: "Open Sans", Arial, sans-serif;
     text-align: left;
@@ -85,7 +91,7 @@ nav .dropdown:hover .dropdown-content {
 
 .desc {
     float:center;
-    margin-left:44%;
+    margin-left:24%;
     width:600px;
     height:150px;
     
